fixed issue where text didn't contrast well with home background

--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,12 @@
 }
 
 .home-name {
-  font-size: 150px;
+  font-size: 100px;
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1500px) {
   .home-name {
-    font-size: 100px;
-    margin: 0 auto 0 auto;
+    font-size: 75px;
   }
 }
 
